# scrapers_ca_app

./: .buildpacks  .gitignore  .gitmodules  .pre-commit-config.yaml  Procfile  README.md  constants.py  constants.rb  cron.py  manage.py  pupa_settings.py  pyproject.toml  represent.py  requirements.in  requirements.txt  sanity-styles-of-address.js  sanity-styles-of-address.rb  sanity.js  scrape.py  scrape_people.py  settings.py
docker/: Dockerfile  README.md  deploy.sh  docker-compose.yml
mycityhall_scraperreports/: urls.py  views.py  wsgi.py
mycityhall_scrapers/: ca_ab_edmonton.json  export_represent.py  meetings.csv  scrape.py
mycityhall_scrapers/represent_data/: ca_ab_edmonton.json  ca_mb_municipalities.json  ca_sk.json  ca_sk_saskatoon.json  ca_yk_municipalities.json
reports/: models.py  utils.py  views.py
reports/migrations/: 0001_initial.py  0002_auto_20170224_0238.py  0003_alter_report_report.py
reports/templates/: base.html  index.html  warnings.html
sanity/: common.js  contact_details.js  links.js  miscellaneous.js  names.js  names.rb  posts.js  posts.rb  relations.js  roles.js  styles.rb
sanity/pass/: contact_details.txt  links.txt  relations.txt  roles.txt
scraped_data/ca-ab-grand_prarie_no_1/: membership_fe85e711-0432-11e3-b400-b8f6b115fc07.json  membership_fe863b8a-0432-11e3-bcda-b8f6b115fc07.json  membership_fe867e54-0432-11e3-99fa-b8f6b115fc07.json  membership_fe86c1f0-0432-11e3-b3a8-b8f6b115fc07.json  membership_fe8702a1-0432-11e3-ace4-b8f6b115fc07.json  (+13 more)
scrapers_ca_app/: mappings.py  settings.py  urls.py  wsgi.py
(+9007 files in other folders)
