[project]
name = "scrapers_ca_app"
version = "0.0.1"

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "DJ008",
    "E501",
    "PLR2004",  # magic
    "PTH",
    "S113",  # timeout

    # To fix:
    "BLE001",  # except Exception
]

[tool.ruff.lint.per-file-ignores]
"*/commands/*" = ["ARG002", "T201"]
"*/migrations/*" = ["RUF012"]
"*/settings.py" = ["ERA001"]
"*/views.py" = ["ARG001"]
